not number and favico added

--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -12,6 +12,7 @@
                 <p class="card-text">Players needed : @(Model.NumberOfPlayers + 1 - Model.Players.Count)</p>
                 <p class="card-text">Starts on : @Model.StartDate</p>
                 <p class="card-text">Ends on : @Model.DueDate</p>
+                <p class="card-text">Discord link : @Model.DiscordUrl</p>
                 <p class="card-text">Description : @Model.Description</p>
             </div>
             <div style="display: inline-block;width: 45%;height: 70%;vertical-align:top;" class="text-left">
