event hub added

--- a/GameHubCSharp/Views/GameEvent/GameEventAdd.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventAdd.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GameHubCSharp.Models.View.GameEventAddViewModel
 <main class="text-center">
     <form class="d-inline-block was-validated text-center add-form"
-          asp-controller="GameEvent" asp-action="GameEventAdd" method="POST" style="margin-bottom: 100px;">
+          asp-controller="GameEvent" asp-action="GameEventAdd" id="event-add" method="POST" style="margin-bottom: 100px;">
 
         <div class="text-center ">
             <div class="w-75 mb-3 d-inline-block">
