--- a/GameHubCSharp/Views/Shared/_Layout.cshtml
+++ b/GameHubCSharp/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/notification.js"></script>
+    <script src="~/js/events.js"></script>
     <script>user = "@User.Identity.Name"</script>
 
     @await RenderSectionAsync("Scripts", required: false)
